# AQM_Project1

./: .gitignore  README.md  prob1.py  project1.py  project1_numermap.py  worldline.py
MonteCarlo_Cversion/: CMakeLists.txt  energy02.csv  energy03.csv  epsilon01.csv  epsilon02.csv  epsilon03.csv  main.c  monte.inp  move.c  muParticle.out  number02.csv  number03.csv  p2p1.csv  plot.py  util.c  util.h  worldline.c  worldline.h
MonteCarlo_Cversion/N16/: avg.csv  numberavg.csv  numberstd.csv  proj2prob2avg.csv  proj2prob2std.csv  std.csv
MonteCarlo_Cversion/N16n/: numberstd.csv
MonteCarlo_Cversion/N20/: avg.csv  numberavg.csv  numberstd.csv  proj2prob2avg.csv  proj2prob2std.csv  std.csv
MonteCarlo_Cversion/N24/: avg.csv  numberavg.csv  numberstd.csv  proj2prob2avg.csv  proj2prob2std.csv  std.csv
MonteCarlo_Cversion/N24n/: avg.csv  numberavg.csv  numberstd.csv  std.csv
MonteCarlo_Cversion/source/: main.c  map.c  map.h  move.c  read_inp.c  read_inp.h  susceptibility.c  susceptibility.h  suspect.c  suspect.h  util.c  util.h  worldline.h
MonteCarlo_pyversion/: prob1.py  project1.py  worldline.py
